--- a/ProductionSchedulingSystem/web/WEB-INF/web.xml
+++ b/ProductionSchedulingSystem/web/WEB-INF/web.xml
@@ -4,8 +4,16 @@
         <servlet-name>LoginController</servlet-name>
         <servlet-class>controller.LoginController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManagePlanController</servlet-name>
+        <servlet-class>controller.ManagePlanController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagePlanController</servlet-name>
+        <url-pattern>/managePlan</url-pattern>
     </servlet-mapping>
 </web-app>
