--- a/ProductionSchedulingSystem/web/WEB-INF/web.xml
+++ b/ProductionSchedulingSystem/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <servlet-name>AddPlanController</servlet-name>
         <servlet-class>controller.AddPlanController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddPlanHeaderController</servlet-name>
+        <servlet-class>controller.AddPlanHeaderController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/logout</url-pattern>
@@ -11,6 +15,10 @@
     <servlet-mapping>
         <servlet-name>AddPlanController</servlet-name>
         <url-pattern>/addPlan</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddPlanHeaderController</servlet-name>
+        <url-pattern>/addPlanHeader</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
