--- a/ProductionSchedulingSystem/web/WEB-INF/web.xml
+++ b/ProductionSchedulingSystem/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>AddPlanHeaderController</servlet-name>
         <servlet-class>controller.AddPlanHeaderController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PlanHeaderController</servlet-name>
+        <servlet-class>controller.PlanHeaderController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/logout</url-pattern>
@@ -19,6 +23,10 @@
     <servlet-mapping>
         <servlet-name>AddPlanHeaderController</servlet-name>
         <url-pattern>/addPlanHeader</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PlanHeaderController</servlet-name>
+        <url-pattern>/planHeader</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
