get product by id

--- a/ProductionSchedulingSystem/nbproject/project.properties
+++ b/ProductionSchedulingSystem/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.gson-2.8.2.jar=C:\\Users\\hatda\\Downloads\\jar_files\\gson-2.8.2.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\hatda\\Downloads\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\hatda\\Downloads\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.mssql-jdbc-12.6.1.jre11.jar=C:\\Users\\hatda\\Downloads\\sqljdbc_12.6.1.0_enu\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar
@@ -41,7 +42,8 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.mssql-jdbc-12.6.1.jre11.jar}
+    ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
