--- a/ProductionSchedulingSystem/web/WEB-INF/web.xml
+++ b/ProductionSchedulingSystem/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>PlanHeaderController</servlet-name>
         <servlet-class>controller.PlanHeaderController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>EditPlanController</servlet-name>
+        <servlet-class>controller.EditPlanController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/logout</url-pattern>
@@ -27,6 +31,10 @@
     <servlet-mapping>
         <servlet-name>PlanHeaderController</servlet-name>
         <url-pattern>/planHeader</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditPlanController</servlet-name>
+        <url-pattern>/editPlan</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
