display worker assignment

--- a/ProductionSchedulingSystem/web/WEB-INF/web.xml
+++ b/ProductionSchedulingSystem/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>DeletePlanController</servlet-name>
         <servlet-class>controller.DeletePlanController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>WorkerAssignmentController</servlet-name>
+        <servlet-class>controller.WorkerAssignmentController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/logout</url-pattern>
@@ -43,6 +47,10 @@
     <servlet-mapping>
         <servlet-name>DeletePlanController</servlet-name>
         <url-pattern>/deletePlan</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WorkerAssignmentController</servlet-name>
+        <url-pattern>/workerAssignment</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
