--- a/ProductionSchedulingSystem/web/WEB-INF/web.xml
+++ b/ProductionSchedulingSystem/web/WEB-INF/web.xml
@@ -24,6 +24,14 @@
         <servlet-name>WorkerAssignmentController</servlet-name>
         <servlet-class>controller.WorkerAssignmentController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AssignWorkerController</servlet-name>
+        <servlet-class>controller.AssignWorkerController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EmployeeController</servlet-name>
+        <servlet-class>controller.EmployeeController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/logout</url-pattern>
@@ -51,6 +59,14 @@
     <servlet-mapping>
         <servlet-name>WorkerAssignmentController</servlet-name>
         <url-pattern>/workerAssignment</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AssignWorkerController</servlet-name>
+        <url-pattern>/assignWorker</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EmployeeController</servlet-name>
+        <url-pattern>/employee</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>
